--- a/Echoes/Echoes.DataStructure/Echoes.DataStructure.csproj
+++ b/Echoes/Echoes.DataStructure/Echoes.DataStructure.csproj
@@ -47,8 +47,12 @@
     <Compile Include="Entity\IThing.cs" />
     <Compile Include="Contextual\IDescriptor.cs" />
     <Compile Include="System\AITriggerType.cs" />
+    <Compile Include="System\IContains.cs" />
     <Compile Include="System\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\IEntityContainer.cs" />
+    <Compile Include="System\ILookable.cs" />
+    <Compile Include="System\IRenderInLocation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Structure\Cottontail.Structure.csproj">
