--- a/Echoes/Echoes.Data/Echoes.Data.csproj
+++ b/Echoes/Echoes.Data/Echoes.Data.csproj
@@ -43,14 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contextual\AkashicEntry.cs" />
     <Compile Include="Contextual\Context.cs" />
     <Compile Include="Contextual\Descriptor.cs" />
     <Compile Include="Contextual\Verb.cs" />
-    <Compile Include="Entity\Person.cs" />
+    <Compile Include="Entity\Persona.cs" />
     <Compile Include="Entity\Place.cs" />
     <Compile Include="Entity\Thing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="System\EntityContainer.cs" />
     <Compile Include="System\EntityPartial.cs" />
   </ItemGroup>
   <ItemGroup />
