plumbing, stubs for the markov engine

--- a/Echoes/Echoes.Interpretation/Echoes.Interpretation.csproj
+++ b/Echoes/Echoes.Interpretation/Echoes.Interpretation.csproj
@@ -43,10 +43,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MarkovianEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Cache\Cottontail.Cache.csproj">
+      <Project>{ec6ed52e-7f08-4f14-9ff5-064332175ca8}</Project>
+      <Name>Cottontail.Cache</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Echoes.DataStructure\Echoes.DataStructure.csproj">
+      <Project>{57886759-d433-4c4f-9bf2-3ea178250bab}</Project>
+      <Name>Echoes.DataStructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FileSystem\Cottontail.FileSystem.csproj">
+      <Project>{13943448-4008-4c37-9f5c-f1793e773314}</Project>
+      <Name>Cottontail.FileSystem</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Structure\Cottontail.Structure.csproj">
+      <Project>{cf2ad084-bea7-47cd-b934-38bff7598937}</Project>
+      <Name>Cottontail.Structure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\Cottontail.Utility.csproj">
+      <Project>{192b043d-e34f-44e2-b59f-10378c6096d3}</Project>
+      <Name>Cottontail.Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
