--- a/Echoes/Echoes.Data/Echoes.Data.csproj
+++ b/Echoes/Echoes.Data/Echoes.Data.csproj
@@ -44,7 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contextual\AkashicEntry.cs" />
-    <Compile Include="Contextual\Context.cs" />
     <Compile Include="Contextual\Descriptor.cs" />
     <Compile Include="Contextual\Verb.cs" />
     <Compile Include="Entity\Persona.cs" />
@@ -62,6 +61,10 @@
     <ProjectReference Include="..\Echoes.DataStructure\Echoes.DataStructure.csproj">
       <Project>{57886759-D433-4C4F-9BF2-3EA178250BAB}</Project>
       <Name>Echoes.DataStructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Echoes.Interpretation\Echoes.Interpretation.csproj">
+      <Project>{c2e2e765-9a8e-4975-af4a-32bcaabf3033}</Project>
+      <Name>Echoes.Interpretation</Name>
     </ProjectReference>
     <ProjectReference Include="..\FileSystem\Cottontail.FileSystem.csproj">
       <Project>{13943448-4008-4C37-9F5C-F1793E773314}</Project>
