--- a/Echoes/Echoes.Backup/Echoes.Backup.csproj
+++ b/Echoes/Echoes.Backup/Echoes.Backup.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{57886759-D433-4C4F-9BF2-3EA178250BAB}</ProjectGuid>
+    <ProjectGuid>{55869029-B0CA-4B30-B222-309F7AF160B1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Echoes.DataStructure</RootNamespace>
-    <AssemblyName>Echoes.DataStructure</AssemblyName>
+    <RootNamespace>Echoes.Backup</RootNamespace>
+    <AssemblyName>Echoes.Backup</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,25 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contextual\IContext.cs" />
-    <Compile Include="Contextual\IVerb.cs" />
-    <Compile Include="Contextual\IAkashicEntry.cs" />
-    <Compile Include="Entity\IPersona.cs" />
-    <Compile Include="Entity\IPlace.cs" />
-    <Compile Include="Entity\IThing.cs" />
-    <Compile Include="Contextual\IDescriptor.cs" />
-    <Compile Include="System\AITriggerType.cs" />
-    <Compile Include="System\IContains.cs" />
-    <Compile Include="System\IEntity.cs" />
+    <Compile Include="HotBackup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="System\ILookable.cs" />
-    <Compile Include="System\IObserve.cs" />
-    <Compile Include="System\IRenderInLocation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cache\Cottontail.Cache.csproj">
       <Project>{EC6ED52E-7F08-4F14-9FF5-064332175CA8}</Project>
       <Name>Cottontail.Cache</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Echoes.DataStructure\Echoes.DataStructure.csproj">
+      <Project>{57886759-D433-4C4F-9BF2-3EA178250BAB}</Project>
+      <Name>Echoes.DataStructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Echoes.Data\Echoes.Data.csproj">
+      <Project>{6D46845D-EE57-431B-9394-BD6F1C7F538A}</Project>
+      <Name>Echoes.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\FileSystem\Cottontail.FileSystem.csproj">
       <Project>{13943448-4008-4C37-9F5C-F1793E773314}</Project>
@@ -71,9 +64,10 @@
       <Project>{CF2AD084-BEA7-47CD-B934-38BFF7598937}</Project>
       <Name>Cottontail.Structure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Utility\Cottontail.Utility.csproj">
+      <Project>{192B043D-E34F-44E2-B59F-10378C6096D3}</Project>
+      <Name>Cottontail.Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
