--- a/Echoes/Echoes.Data/Echoes.Data.csproj
+++ b/Echoes/Echoes.Data/Echoes.Data.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Contextual\AkashicEntry.cs" />
     <Compile Include="Contextual\Descriptor.cs" />
     <Compile Include="Contextual\Verb.cs" />
+    <Compile Include="Interp\MarkovianEngine.cs" />
     <Compile Include="Entity\Persona.cs" />
     <Compile Include="Entity\Place.cs" />
     <Compile Include="Entity\Thing.cs" />
@@ -151,10 +152,6 @@
     <ProjectReference Include="..\Echoes.DataStructure\Echoes.DataStructure.csproj">
       <Project>{57886759-D433-4C4F-9BF2-3EA178250BAB}</Project>
       <Name>Echoes.DataStructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Echoes.Interpretation\Echoes.Interpretation.csproj">
-      <Project>{c2e2e765-9a8e-4975-af4a-32bcaabf3033}</Project>
-      <Name>Echoes.Interpretation</Name>
     </ProjectReference>
     <ProjectReference Include="..\FileSystem\Cottontail.FileSystem.csproj">
       <Project>{13943448-4008-4C37-9F5C-F1793E773314}</Project>
