fixing bad css, should be more responsive now. Also adding weighting to context memory and refactor of list identification

--- a/Echoes/Utility/Cottontail.Utility.csproj
+++ b/Echoes/Utility/Cottontail.Utility.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Data\EnumUtility.cs" />
     <Compile Include="Data\SerializableDataPartial.cs" />
     <Compile Include="Data\Serialization.cs" />
+    <Compile Include="Data\SplitListType.cs" />
     <Compile Include="Data\StringUtility.cs" />
     <Compile Include="Data\TypeUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
